syntax = "proto3";
option go_package = "./;pb";

import "google/protobuf/timestamp.proto";

message Problem{
  int64 id = 1;
  google.protobuf.Timestamp create_at = 2;
  google.protobuf.Timestamp delete_at = 3;

  string title = 4;
  string description = 5;
  int32 level = 6;
  repeated string tags = 7;
  string test_case = 8;

  int32 time_limit = 9;
  int32 memory_limit = 10;
  string io_mode = 11;
  string create_by = 12;
}
